Sun Apr  6 00:56:44 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	unittests/compare:
	* core/variables.s: Renamed to...
	* core/gblx_lclx_setx.s: ...this.

Sat Apr  5 23:48:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	unittests/compare:
	* Makefile.in (OUTPUTTYPE): Define as AOF or ELF depending on output
	fileformat choosen.
	(OUTPUTELF): Remove definition.
	* core/instr_b_bl_blx_reloc.s: Use OUTPUTTYPE instead of OUTPUTELF.
	* core/instr_bx_reloc.s: Likewise.
	* core/instr_cbz_cbnz.s: Likewise.

Sun Mar 16 15:49:25 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpuctrl.c (GetBranchLabel): Improve support for branches to
	absolute addresses.
	(m_branch): Support ValueInt ELF relocs.
	(m_cbnz_cbz): Likewise.
	(m_blx): Likewise.
	* src/reloc.c (Reloc_CreateInternal): Add support for ValueInt
	ELF relocs.
	* src/symbol.h (SymbolAttr::value): Improve comments.

	unittest/reloc:
	* src/branch_no_org.s: Add
	* src/branch_with_org.s: Likewise.
	* src/include/branch.s: Likewise.
	* ref/branch_no_org_aof.txt: Likewise.
	* ref/branch_no_org_elf.txt: Likewise.
	* ref/branch_with_org_aof.txt: Likewise.
	* ref/branch_with_org_elf.txt: Likewise.

Mon Mar 10 02:05:56 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpuctrl.c (m_branch): Simplify test for calling Reloc_CreateELF.
	(m_cbnz_cbz): Likewise.
	(m_blx): Likewise.
	(m_bx): Likewise.
	(m_adr): Likewise.

Sun Mar  9 19:18:48 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/reloc.c (Reloc_SplitRelocAndAddend): Fail during pass one when
	there would be relocation symbol not yet defined/declared.
	* src/reloc.h (RelocAndAddend_t): Fix comments.
	* unittests/compare/core/operator_base_index.s: Add test case.

Sun Mar  9 19:14:35 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/reloc.c (Reloc_GetRawRelocData): Fix mask value in assert.

Sun Mar  9 18:46:15 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* src/aoffile.h (HOW2_*): Update comments.
