@@ -1,3 +1,7 @@
+Sun Apr  6 01:01:28 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* unittests/compare/core/storagemap_register.s: Add BASED AREA test.
+
 Sun Apr  6 00:56:44 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	unittests/compare:
